examples/test/testpolicy3143.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3143
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key26: value13
      key12: value36
      key41: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value40
          key15: value6
      podSelector:
        matchLabels:
          key39: value33
          key1: value21
